--- a/index.html
+++ b/index.html
@@ -65,11 +65,37 @@
                 (leaving some more room since I still have to write this)</p>
         </div>
 
+        <br>
+
+        <h1 style="text-align: center;" data-aos-delay="300" data-aos="fade-up">Our Programs</h1>
+
         <div class="programs">
             <br>
-            <h1 data-aos-delay="300" data-aos="fade-up">Our Programs</h1>
+            <!-- <h1 data-aos-delay="300" data-aos="fade-up">Our Programs</h1> -->
 
-            
+            <div class="cybersecurity">
+                <div class="topimage">
+                    <img width="300px" height="200px" src="./images/key-lock.png" alt="Cybersecurity">
+                    <p>Cybersecurity</p>
+                    <button data-aos="fade-up" style="margin-left: -4%; margin-top: 1%;" class="btn btn-outline-primary">Join!</button>
+                </div>
+            </div>
+
+            <div class="robotics">
+                <div class="topimage">
+                    <img width="300px" height="200px" src="./images/vintage-robot (1).png" alt="Robotics">
+                    <p>Robotics</p>
+                    <button data-aos="fade-up" style="margin-left: -4%; margin-top: 1%;" class="btn btn-outline-primary">Join!</button>
+                </div>
+            </div>
+
+            <div class="womeninstem">
+                <div class="topimage">
+                    <img width="300px" height="200px" src="./images/female.png" alt="Women In Stem">
+                    <p>Women in STEM</p>
+                    <button data-aos="fade-up" style="margin-left: -4%; margin-top: 1%;" class="btn btn-outline-primary">Join!</button>
+                </div>
+            </div>
 
         </div>
 
