--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li class="nav-item"><a style="color: black;" class="nav-link">AHS Computer Science Club</a></li>
                     <li class="nav-item"><a href="/team" class="nav-link">Team</a></li>
                     <li class="nav-item"><a href="/opportunities" class="nav-link">Opportunities</a></li>
-                    <li class="nav-item"><a href="/events" class="nav-link">Events</a></li>
+                    <li class="nav-item"><a href="/events/events.html" class="nav-link">Events</a></li>
                 </ul>
     
             </div>
@@ -51,6 +51,12 @@
 
             <a href="/join/index.html">
                 <button data-aos="fade-up" style="margin-left: -4%; margin-top: 1%;" class="btn btn-outline-primary">Join us!</button>
+            </a>
+
+            <br>
+
+            <a href="https://www.gofundme.com/f/alhambra-cs-club">
+                <button data-aos="fade-up" style="margin-left: -4%; margin-top: 1%;" class="btn btn-outline-success">Donate!</button>
             </a>
             
 
