--- a/join/index.html
+++ b/join/index.html
@@ -28,9 +28,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a style="color: black;" class="nav-link">AHS Computer Science Club</a></li>
-                    <li class="nav-item"><a href="/about" class="nav-link">Team</a></li>
-                    <li class="nav-item"><a href="/team" class="nav-link">Opportunities</a></li>
-                    <li class="nav-item"><a href="/join" class="nav-link">Events</a></li>
+                    <li class="nav-item"><a href="/team" class="nav-link">Team</a></li>
+                    <li class="nav-item"><a href="/opportunities" class="nav-link">Opportunities</a></li>
+                    <li class="nav-item"><a href="/events/events.html" class="nav-link">Events</a></li>
                 </ul>
     
             </div>
