--- a/programs/cybersecurity.html
+++ b/programs/cybersecurity.html
@@ -28,9 +28,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a style="color: black;" class="nav-link">AHS Computer Science Club</a></li>
-                    <li class="nav-item"><a href="/about" class="nav-link">Team</a></li>
-                    <li class="nav-item"><a href="/team" class="nav-link">Opportunities</a></li>
-                    <li class="nav-item"><a href="/join" class="nav-link">Events</a></li>
+                    <li class="nav-item"><a href="/team" class="nav-link">Team</a></li>
+                    <li class="nav-item"><a href="/opportunities" class="nav-link">Opportunities</a></li>
+                    <li class="nav-item"><a href="/events/events.html" class="nav-link">Events</a></li>
                 </ul>
     
             </div>
@@ -39,13 +39,13 @@
 
     <div class="aboutus">
         <br>
-         <h1 data-aos-delay="100" data-aos="fade-up">About Us</h1>
+         <h1 data-aos-delay="100" data-aos="fade-up">About This Program</h1>
         <p data-aos="fade-up" data-aos-delay="200" style="font-size: 1.3rem; margin-left: 15%; margin-right: 15%; margin-top: 2%;">You like cybersecurity? Dang.</p>
     </div>
 
     <div class="programs">
         <br>
-        <h1 data-aos-delay="300" data-aos="fade-up">Our Programs</h1>
+        <h1 data-aos-delay="300" data-aos="fade-up">?</h1>
 
         
 
