responsive to the our mission

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <br>
             <h1 data-aos-delay="50" data-aos="fade-up">Our Mission</h1>
 
-            <p data-aos="fade-up" style="margin-left: 8%; margin-top: 1%;">is to introduce the community to the many branches we offer </p>
-            <p data-aos="fade-up" data-aos-delay="100" style="margin-left: 8%;">and help develop their skills to the next level. (still not done)</p>
+            <p data-aos="fade-up">is to introduce the community to the many branches we offer </p>
+            <p data-aos="fade-up" data-aos-delay="100">and help develop their skills to the next level. (still not done)</p>
 
             <a href="/join/index.html">
-                <button data-aos="fade-up" style="margin-left: -4%; margin-top: 1%;" class="btn btn-outline-primary">Join us!</button>
+                <button data-aos="fade-up" class="btn btn-outline-primary">Join us!</button>
             </a>
 
             <br>
