--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
     </nav>  
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="ourmission">
             <br>
             <h1 data-aos-delay="50" data-aos="fade-up" style="font-weight: 700;">Our Mission</h1>
@@ -137,7 +137,7 @@
         <br><div class="aesthetic"></div>
 
         <div class="benefits">
-            <div class="container-fluid px-5">
+            <div class="container">
                 <h1 data-aos-delay="50" data-aos="fade-up">The Benefits</h1> <br>
                 <p data-aos-delay="150" data-aos="fade-up" style="font-size: 1.2rem;">Placeholder text, how wonderful :D</p>
                </div>
