icon image styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <nav class="navbar bg-white navbar-light navbar-expand-lg">
 
-            <a href="/" class="navbar-brand"><img class="ahscsico" src="./images/ahsCS.png" width="100px" height="100px" alt="AHS Computer Science Club" title=""></a>
+            <a href="/" class="navbar-brand"><img class="ahscsico" src="./images/ahsCS.png" alt="AHS Computer Science Club" title=""></a>
     
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive">
