made other buttons capable of color

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p data-aos="fade-up" data-aos-delay="100">and help develop their skills to the next level. (still not done)</p>
 
             <br><a href="/join/index.html">
-                <button data-aos="fade-up" class="btn px-5">Join</button>
+                <button data-aos="fade-up" class="btn btn-normal px-5">Join</button>
             </a>
 
             <br>
@@ -73,6 +73,11 @@
                 
                 
                 </p>
+
+                <a href="https://www.gofundme.com/f/alhambra-cs-club">
+                    <button data-aos="fade-up" class="btn btn-success px-5">Donate</button>
+                </a>
+                <br>
                 <br>
         </div>
     </div>
@@ -94,7 +99,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Cybersecurity</h5>
                           <p class="card-text">This one's all secure</p>
-                          <a href="./programs/cybersecurity.html" class="btn btn-primary">Discover</a> 
+                          <a href="./programs/cybersecurity.html" class="btn btn-normal">Discover</a> 
                         </div>
                       </div>
                 </div>
@@ -105,7 +110,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Robotics</h5>
                           <p class="card-text">Beep Boop Bop</p>
-                          <a href="./programs/robotics.html" class="btn btn-primary">Discover</a>
+                          <a href="./programs/robotics.html" class="btn btn-normal">Discover</a>
                         </div>
                       </div>
                 </div>
@@ -116,7 +121,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Women In STEM</h5>
                           <p class="card-text">Stem is cool</p>
-                          <a href="./programs/womeninstem.html" class="btn btn-primary">Discover</a>
+                          <a href="./programs/womeninstem.html" class="btn btn-normal">Discover</a>
                         </div>
                       </div>
                 </div>
