--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
             <a href="/" class="navbar-brand"><img class="ahscsico" src="./images/ahsCS.png" alt="AHS Computer Science Club" title=""></a>
     
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -180,7 +180,7 @@
 
 
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
         <script>
