--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <link rel="icon" type="image/x-icon" href="/images/ahs.svg">
 
-    <link href="./bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="./libraries/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./aos-master/dist/aos.css" />
+    <link rel="stylesheet" href="./libraries/aos-master/dist/aos.css" />
 
     <link rel="stylesheet" href="./styles.css">
 
@@ -179,9 +179,9 @@
         </div>
 
 
-        <script src="./aos-master/dist/aos.js"></script>
-        <script src="./jquery-3.6.0.min.js"></script>
-        <script src="./bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="./libraries/aos-master/dist/aos.js"></script>
+        <script src="./libraries/jquery-3.6.0.min.js"></script>
+        <script src="./libraries/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
         <script>
           AOS.init();
