--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         </div>
 
-        <div class="ourmission"><img src="./images/man.png"> </img></div>
+        <div class="ourmission"><img src="./images/man-alt.png"> </img></div>
     </div>
 
     <div class="container-fluid">
