events page rpugh draft
- events page added
- fixed dead buttons on home page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="/team" class="nav-link">Team</a></li>
                     <li class="nav-item"><a href="/opportunities" class="nav-link">Opportunities</a></li>
-                    <li class="nav-item"><a href="/events/events.html" class="nav-link">Events</a></li>
+                    <li class="nav-item"><a href="/events/" class="nav-link">Events</a></li>
         
                 </ul>
     
@@ -52,7 +52,7 @@
             <p data-aos="fade-up" data-aos-delay="100">and help develop their skills to the next level. (still not done)</p>
 
             <br><a href="/join/index.html">
-                <button data-aos="fade-up" class="btn px-5">Join</button>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe3mOv3VskCxd2aAkUwgQWJ4Hq11lyeaf2kBjSR7pkhEKJmsg/viewform" data-aos="fade-up" class="btn px-5" target="_blank">Join</a>
             </a>
 
             <br>
