--- a/events/index.html
+++ b/events/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alhambra Computer Science Club</title>
 
+
     <link rel="icon" type="image/x-icon" href="/images/ahs.svg">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="/libraries/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="/libraries/aos-master/dist/aos.css" />
+
     <link rel="stylesheet" href="/styles.css">
-
 
 </head>
     <body>
@@ -25,7 +26,7 @@
             </button>
 
         <!-- \\
-            (o> < tweet
+            (o> < i love hour of code tweet
          \\_//)
           \_/_)
            _|_ -->
@@ -51,7 +52,7 @@
     </div> <br>
 
     <div class="container">
-      <h5> 
+      <h5 data-aos-delay="0" data-aos="fade-up" > 
         The CS Club partakes in various events throughout the year. These can include regional/state competitions, field trips, fundraisers, and workshops.
 
         <br><br>
@@ -62,7 +63,8 @@
 
 <div class="container">
   <div class="slideshow" >
-  <div id="carousel-captions" class="carousel slide" data-bs-ride="carousel" style="margin: 0 auto;">
+  <div id="carousel-captions" class="carousel slide" data-bs-ride="carousel" style="margin: 0 auto; max-width: 100%; height: auto;">
+
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carousel-captions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carousel-captions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -92,22 +94,22 @@
 </div>
 
 <div class="container my-4"> <hr>
-  <h4 style = "text-align: center;">These events include:</h5>
-  <div class = "events">
-    <div class="outsideevents" style = "float:left; width:50%">
+  <h4 style = "text-align: center;" data-aos-delay="50" data-aos="fade-up" >These events include:</h5>
+  <div class = "events" >
+    <div class="outsideevents" style = "float:left; width:50%" data-aos-delay="100" data-aos="fade-up" >
       <h3> SkillsUSA <br> Summer CyberCamps <br> Cal Poly's CCIC</h3>
   </div>
 
-  <div class="hostedevents" style = "float:left; width:50%">
+  <div class="hostedevents" style = "float:left; width:50%" data-aos-delay="150" data-aos="fade-up" >
     <h3> Hour of Code <br> MJHS Field Trip <br> Holidary Frolic</h3> 
   </div>
 </div> 
-<h4 style = "text-align: center;">...and much more!</h4> <hr>
+<h4 style = "text-align: center;" data-aos-delay="50" data-aos="fade-up" >...and much more!</h4> <hr>
 </div>
 
     <div class="container">
       <div class="calendar">
-        <h1>Calendar</h1> <br>
+        <h1 style="text-align: center;" >Calendar</h1> <br>
       <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%233F51B5&ctz=America%2FLos_Angeles&showPrint=0&showTitle=0&showTabs=0&showCalendars=0&showNav=1&src=Y19zbW52aHU0NnRqOGI4OGQwN2YwMDEwdDI5a0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%239E69AF" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe> 
     </div></div>
     
@@ -134,9 +136,9 @@
     </div>
 </footer>
 
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="/libraries/aos-master/dist/aos.js"></script>
+<script src="/libraries/jquery-3.6.0.min.js"></script>
+<script src="/libraries/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <script>
   AOS.init();
