--- a/events/index.html
+++ b/events/index.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" type="image/x-icon" href="/images/ahs.svg">
 
-    <link href="/libraries/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="/libraries/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/libraries/aos-master/dist/aos.css" />
 
@@ -57,7 +57,7 @@
 
         <br><br>
         
-        In addition, Alhambra CS Club hosts computer science events of its own! Through these events, you are able to learn and get firsthand experience on elements of computer science. If you're advanced enough, you may be eligible to be a volunteer to help out at these events for community service hours! These can count toward CSHS hours, graduation requirements, or any other organization such as NHS and CSF.</h5> 
+        In addition, Alhambra CS Club hosts computer science events of its own. Through these events, you are able to learn and get firsthand experience on elements of computer science. If you're advanced enough, you may be eligible to be a volunteer to help out at these events for community service hours. These can count toward CSHS hours, graduation requirements, or any other organization such as NHS and CSF.</h5> 
     </div> <br> 
 
 
@@ -109,7 +109,7 @@
 
     <div class="container">
       <div class="calendar">
-        <h1 style="text-align: center;" >Calendar</h1> <br>
+        <h1>Calendar</h1> <br>
       <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%233F51B5&ctz=America%2FLos_Angeles&showPrint=0&showTitle=0&showTabs=0&showCalendars=0&showNav=1&src=Y19zbW52aHU0NnRqOGI4OGQwN2YwMDEwdDI5a0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%239E69AF" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe> 
     </div></div>
     
@@ -138,7 +138,7 @@
 
 <script src="/libraries/aos-master/dist/aos.js"></script>
 <script src="/libraries/jquery-3.6.0.min.js"></script>
-<script src="/libraries/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="/libraries/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="" crossorigin="anonymous"></script>
 
 <script>
   AOS.init();
