Reverted button - will figure out how to make it longer later

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 
             <br>
             
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe3mOv3VskCxd2aAkUwgQWJ4Hq11lyeaf2kBjSR7pkhEKJmsg/viewform">
-                <button class="btn btn-normal"data-aos="fade-up" class="btn px-5" target="_blank">Join</button>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe3mOv3VskCxd2aAkUwgQWJ4Hq11lyeaf2kBjSR7pkhEKJmsg/viewform" data-aos="fade-up" class="btn px-5" target="_blank">Join</a>
             </a>
 
             <br>
