Added benefits section :)

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="benefits">
             <div class="container">
                 <h1 data-aos-delay="50" data-aos="fade-up">The Benefits</h1> <br>
-                <p data-aos-delay="150" data-aos="fade-up" style="font-size: 1.2rem;">Placeholder text, how wonderful :D</p>
+                <p data-aos-delay="150" data-aos="fade-up" style="font-size: 1.2rem;">Alhambra CS provides a multitude of benefits to any member that joins. From learning basic cybersecurity skills to creating connections with experts and developers of the technology industry. One could explore the craftsmanship that comes with building a robot, or attempt to understand the enigmatic code that comes along. In cybersecurity, there are a variety of challenges that come with protecting your privacy online; through our program, you can develop those skills. All of our workshops develop your skills in the tech world and build relationships with people that will last a lifetime to come. Skills are what you need to survive, and we can provide them. <br> <br> <strong>"The future belongs to those who learn more skills and combine them in creative ways." <br> - Robert Greene </strong></p>
                </div>
         </div>
 
