--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1 data-aos-delay="50" data-aos="fade-up" style="font-weight: 700;">Our Mission</h1>
 
             <p data-aos="fade-up">is to introduce the community to the many branches we offer </p>
-            <p data-aos="fade-up" data-aos-delay="100">and help develop their skills to the next level. (still not done)</p>
+            <p data-aos="fade-up" data-aos-delay="100">and help develop their skills to the next level.</p>
 
             <br>
             
@@ -118,7 +118,7 @@
         
         <div class="aesthetic"></div>
 
-        <div class="benefits">
+        <div class="benefits pb-5">
             <div class="container">
                 <h1 data-aos-delay="50" data-aos="fade-up">The Benefits</h1> <br>
                 <p data-aos-delay="150" data-aos="fade-up" style="font-size: 1.2rem;">Alhambra CS provides a multitude of benefits to any member that joins. From learning basic cybersecurity skills to creating connections with experts and developers of the technology industry. One could explore the craftsmanship that comes with building a robot, or attempt to understand the enigmatic code that comes along. In cybersecurity, there are a variety of challenges that come with protecting your privacy online; through our program, you can develop those skills. All of our workshops develop your skills in the tech world and build relationships with people that will last a lifetime to come. Skills are what you need to survive, and we can provide them. <br> <br> <strong>"The future belongs to those who learn more skills and combine them in creative ways." <br> - Robert Greene </strong></p>
@@ -132,8 +132,8 @@
                             <div class="hstack gap-2" class="footertext">
                                 <div class="vstack gap-3">
                                     <div class="white-text" class="underlined-text" style="font-size: 1.6rem; text-decoration: underline;" class="bg-none">AHS CS Club</div>
-                                    <div class="white-text" class="underlined-text" class="bg-none ">Receive updates on our Remind!</div>
-                                    <div class="white-text" class="underlined-text" class="bg-none ">Text @ahscs101 to 81010.</div>
+                                    <div class="white-text" class="underlined-text" class="bg-none ">Receive updates on Remind; text @ahscs101 to 81010.</div>
+                                    <div class="white-text" class="underlined-text" class="bg-none ">Built by Parabla.</div>
                                   </div>
                                   <div class="vstack gap-6">
                                      <h3 class="white-text">Socials</h3>
