--- a/events/index.html
+++ b/events/index.html
@@ -47,7 +47,7 @@
     <!--create a banner header-->
     <div class="banner"> 
       <div class="container">
-        <h1 style = "text-align: center;">Events</h1>
+        <h1 style = "text-align: center;"> <span style="background-color: #1e1e1e;">Events</span></h1>
       </div>
     </div> <br>
 
@@ -121,8 +121,8 @@
                     <div class="hstack gap-2" class="footertext">
                         <div class="vstack gap-3">
                             <div class="white-text" class="underlined-text" style="font-size: 1.6rem; text-decoration: underline;" class="bg-none">AHS CS Club</div>
-                            <div class="white-text" class="underlined-text" class="bg-none ">Receive updates on our Remind!</div>
-                            <div class="white-text" class="underlined-text" class="bg-none ">Text @ahscs101 to 81010.</div>
+                            <div class="white-text" class="underlined-text" class="bg-none ">Receive updates on Remind; text @ahscs101 to 81010.</div>
+                            <div class="white-text" class="underlined-text" class="bg-none ">Built by Parabla.</div>
                           </div>
                           <div class="vstack gap-6">
                              <h3 class="white-text">Socials</h3>
