--- a/events/index.html
+++ b/events/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alhambra Computer Science Club</title>
+    <title>Events - Alhambra CS Club</title>
 
 
     <link rel="icon" type="image/x-icon" href="/images/ahs.svg">
@@ -114,21 +114,22 @@
     </div></div>
     
 
-      <footer>
+  <footer>
         <div class="container-fluid">
         <div class="bottom py-3 px-3">
                 <br>
                     <div class="hstack gap-2" class="footertext">
                         <div class="vstack gap-3">
-                            <div class="white-text" class="underlined-text" style="font-size: 1.6rem; text-decoration: underline;" class="bg-none">AHS CS Club</div>
-                            <div class="white-text" class="underlined-text" class="bg-none ">Receive updates on Remind; text @ahscs101 to 81010.</div>
+                            <div class="white-text" class="underlined-text" style="font-size: 1.6rem; text-decoration: underline;" class="bg-none">Alhambra CS Club</div>
+                            <div class="white-text" class="underlined-text" class="bg-none ">Questions? <a href="mailto:matthew@parabla.net" style="color: white;">Email us.</a></div>
                             <div class="white-text" class="underlined-text" class="bg-none ">Built by Parabla.</div>
                           </div>
                           <div class="vstack gap-6">
                              <h3 class="white-text">Socials</h3>
                                 <a class="white-text" href="https://discord.gg/MAqeXJJ">Discord</a>
                                 <a class="white-text" href="https://instagram.com/ahscompscience">Instagram</a>
-                                <a class="white-text" href="https://twitter.com/ahscompscience">Twitter</a> </p>
+                                <a class="white-text" href="https://twitter.com/ahscompscience">Twitter</a>
+                                <a class="white-text" href="https://www.remind.com/join/alhambracs">Remind</a></p>
                           </div>
                       </div>
                     
