--- a/events/index.html
+++ b/events/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alhambra Computer Science Club</title>
+    <title>Events - Alhambra CS Club</title>
 
 
     <link rel="icon" type="image/x-icon" href="/images/ahs.svg">
 
-    <link href="/libraries/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="/libraries/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/libraries/aos-master/dist/aos.css" />
 
@@ -47,7 +47,7 @@
     <!--create a banner header-->
     <div class="banner"> 
       <div class="container">
-        <h1 style = "text-align: center;">Events</h1>
+        <h1 style = "text-align: center;"> <span style="background-color: #1e1e1e;">Events</span></h1>
       </div>
     </div> <br>
 
@@ -109,28 +109,29 @@
 
     <div class="container">
       <div class="calendar">
-        <h1 style="text-align: center;" >Calendar</h1> <br>
+        <h1>Calendar</h1> <br>
       <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%233F51B5&ctz=America%2FLos_Angeles&showPrint=0&showTitle=0&showTabs=0&showCalendars=0&showNav=1&src=Y19zbW52aHU0NnRqOGI4OGQwN2YwMDEwdDI5a0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%239E69AF" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe> 
     </div></div>
     
 
-      <footer>
-        <div class="container-fluid">
-        <div class="bottom py-3 px-3">
-                <br>
-                    <div class="hstack gap-2" class="footertext">
-                        <div class="vstack gap-3">
-                            <div class="white-text" class="underlined-text" style="font-size: 1.6rem; text-decoration: underline;" class="bg-none">AHS CS Club</div>
-                            <div class="white-text" class="underlined-text" class="bg-none ">Receive updates on our Remind!</div>
-                            <div class="white-text" class="underlined-text" class="bg-none ">Text @ahscs101 to 81010.</div>
-                          </div>
-                          <div class="vstack gap-6">
-                             <h3 class="white-text">Socials</h3>
-                                <a class="white-text" href="https://discord.gg/MAqeXJJ">Discord</a>
-                                <a class="white-text" href="https://instagram.com/ahscompscience">Instagram</a>
-                                <a class="white-text" href="https://twitter.com/ahscompscience">Twitter</a> </p>
-                          </div>
-                      </div>
+    <footer>
+      <div class="container-fluid">
+      <div class="bottom py-3 px-3">
+              <br>
+                  <div class="hstack gap-2" class="footertext">
+                      <div class="vstack gap-3">
+                          <div class="white-text" class="underlined-text" style="font-size: 1.6rem; text-decoration: underline;" class="bg-none">Alhambra CS Club</div>
+                          <div class="white-text" class="underlined-text" class="bg-none ">Questions? <a href="mailto:matthew@parabla.net" style="color: white;">Email us.</a></div>
+                          <div class="white-text" class="underlined-text" class="bg-none ">Built by Parabla.</div>
+                        </div>
+                        <div class="vstack gap-6">
+                           <h3 class="white-text">Socials</h3>
+                              <a class="white-text" href="https://discord.gg/MAqeXJJ">Discord</a>
+                              <a class="white-text" href="https://instagram.com/ahscompscience">Instagram</a>
+                              <a class="white-text" href="https://twitter.com/ahscompscience">Twitter</a>
+                              <a class="white-text" href="https://www.remind.com/join/alhambracs">Remind</a></p>
+                        </div>
+                    </div>
                     
         </div>
     </div>
@@ -138,7 +139,7 @@
 
 <script src="/libraries/aos-master/dist/aos.js"></script>
 <script src="/libraries/jquery-3.6.0.min.js"></script>
-<script src="/libraries/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="/libraries/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="" crossorigin="anonymous"></script>
 
 <script>
   AOS.init();
