--- a/team/index.html
+++ b/team/index.html
@@ -26,7 +26,7 @@
             </button>
 
         <!-- \\
-            (o> < i love hour of code tweet
+            (o> < the team tweet
          \\_//)
           \_/_)
            _|_ -->
@@ -61,7 +61,7 @@
     </div> <br> 
 
 
-<!-- <div class="container">
+<!-- <div class="container"> possible carousel? if so, imagesneedded
   <div class="slideshow" >
   <div id="carousel-captions" class="carousel slide" data-bs-ride="carousel" style="margin: 0 auto; max-width: 100%; height: auto;">
 
