--- a/team/index.html
+++ b/team/index.html
@@ -47,19 +47,9 @@
     <!--create a banner header-->
     <div class="banner-team"> 
       <div class="container">
-        <h1 style = "text-align: center;">Team</h1>
+        <h1 style = "text-align: center;">Our Team</h1>
       </div>
     </div> <br>
-
-    <div class="container">
-      <h5 data-aos-delay="0" data-aos="fade-up" > 
-        The team
-
-        <br><br>
-        
-        DAAAAAAAAAAAAANG!!!!!!!!</h5> 
-    </div> <br> 
-
 
 <!-- <div class="container"> possible carousel? if so, imagesneedded
   <div class="slideshow" >
@@ -93,8 +83,10 @@
   </div>
 </div> -->
 
-<div class="container my-18"> <hr>
-    <h3>The team</h3>
+<div class="container my-18">
+    <h1 style="font-size: 5rem; text-align: center;">Team</h1>
+
+    <hr>
 
     <div class="row row-cols-1 row-cols-md-4 g-4" style="align-items: center; justify-content: center; text-align: center; ">
       <div class="col">
