--- a/team/index.html
+++ b/team/index.html
@@ -200,6 +200,25 @@
         </div>
       </div>
 
+      <div class="col">
+        <div class="card" style="width: 20rem;">
+          <img src="/images/Peter_Griffin.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">AAAAAAAAAAAA's cousin</h5>
+            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa at, aliquam praesentium accusantium enim aperiam, eos nemo vel fugit labore ipsam saepe esse minima libero similique iure! Id placeat laudantium sint accusantium? Possimus quod vitae voluptates, voluptatum recusandae itaque fugiat eum cupiditate repellendus eaque porro nostrum doloremque? Tempora, minima? Distinctio sit omnis, rerum officiis ab animi amet minima voluptatum sed ut atque porro cum tenetur quia expedita impedit officia commodi quidem libero quasi enim. Autem unde perspiciatis tempora commodi! Dignissimos ex cumque enim non molestias, odio modi totam pariatur sit odit inventore quam omnis minima aut natus numquam sapiente iure.</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">School email: <a href="mailto:nothing@mail.org">gothamcitysux@aaaaaaa.net</a></li>
+            <li class="list-group-item">Twitter: <a href="https://twitter.com/joe">@aaaaaaaaaaa</a></li>
+            <li class="list-group-item">Role in club: aaaaaaaaaaaaaa</li>
+          </ul>
+          <!-- <div class="card-body">
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div> -->
+        </div>
+      </div>
+
     </div>
 </div>
 
