--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Alhambra Senior High School's Computer Science Club. Dedicated to teaching students about cybersecurity, robotics, and the many STEM fields.">
+    
     <title>Alhambra Computer Science Club</title>
 
     <link rel="icon" type="image/x-icon" href="/images/ahs.svg">
