--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -51,14 +51,17 @@
       </div>
     </div> <br>
 
-    <div class="container">
+    <div class="container" style="text-align: center;">
       <h5 data-aos-delay="0" data-aos="fade-up" > 
         You want an opportunitity???????????????????????????
-
-        <br><br>
         
-      we have</h5> 
+      </h5>
+
+
+
     </div> <br> 
+
+
 
 <div class="container my-4"> <hr>
   <h4 style = "text-align: center;" data-aos-delay="50" data-aos="fade-up" >These opportunities include:</h5>
