--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -26,7 +26,7 @@
             </button>
 
         <!-- \\
-            (o> < here are some offers tweet
+            (o> < opportunities tweet
          \\_//)
           \_/_)
            _|_ -->
