--- a/team/index.html
+++ b/team/index.html
@@ -150,7 +150,7 @@
 
     <div class="col py-3">
       <div class="card text-center " class="team-card">
-        <img class="card-img-top" src="/images/man-alt.png" alt="Card image cap">
+        <img class="card-img-top" src="/images/man.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Family Guy Enjoyer</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
