added text animations

--- a/events/index.html
+++ b/events/index.html
@@ -61,7 +61,7 @@
     </div> <br> 
 
 
-<div class="container">
+<div class="container" data-aos="fade-up">
   <div class="slideshow" >
   <div id="carousel-captions" class="carousel slide" data-bs-ride="carousel" style="margin: 0 auto; max-width: 100%; height: auto;">
 
@@ -93,11 +93,13 @@
   </div>
 </div>
 
-<div class="container my-4"> <hr>
-  <h4 style = "text-align: center;" data-aos-delay="50" data-aos="fade-up" >These events include:</h5>
+<div class="container my-4"> 
+  <hr>
+  <h2 style = "text-align: center;" data-aos-delay="50" data-aos="fade-up" >These events include:</h2>
   <div class = "events" >
     <div class="outsideevents" style = "float:left; width:50%" data-aos-delay="100" data-aos="fade-up" >
       <h3> SkillsUSA <br> Summer CyberCamps <br> Cal Poly's CCIC</h3>
+      
   </div>
 
   <div class="hostedevents" style = "float:left; width:50%" data-aos-delay="150" data-aos="fade-up" >
