--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" type="image/x-icon" href="/images/ahs.svg">
 
-    <link href="/libraries/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="/libraries/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/libraries/aos-master/dist/aos.css" />
     
@@ -72,6 +72,8 @@
       and Lorem ipsum dolor sit amet consectetur adipisicing elit. 
       You can learn how to Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, animi, 
       and even how to Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam, illo id!</p>
+
+      
 </div>
 
     <div class="container">
