--- a/programs/robotics.html
+++ b/programs/robotics.html
@@ -53,7 +53,7 @@
         <div class="robotics">
             <div data-aos="fade-up" class='console-container' style="text-align: center;"><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
                 <br>
-            <p style="font-size: 1.3rem; font-weight: 400;" data-aos="fade-up">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex cupiditate magnam, beatae odit quia amet libero eum minus expedita iusto rerum nihil. Mollitia fugit eveniet error quasi quis id. Ex harum eveniet iure fugit dolorem nisi, officia est nobis molestiae! Dicta odit eius veritatis.</p>
+            <p style="font-size: 1.3rem; font-weight: 400;" data-aos="fade-up">This is a page in testing. It has not been completed. This is filler text. Please enjoy the filler text. How are you today? I'm good. This page will have stuff in it soon, just wait a bit. Again, this is a page that is not finished, and this is filler text. This is text designed to act as a placeholder for an unfinished page. You can erase it at any time. I don't mind.</p>
         </div>
 
     </div>
