--- a/programs/womeninstem.html
+++ b/programs/womeninstem.html
@@ -25,7 +25,7 @@
     <body>
         <nav class="navbar bg-white navbar-light navbar-expand-lg">
 
-            <a href="/" class="navbar-brand"><img class="ahscsico" src="./images/ahsCS.png" alt="Home" title="AHS Computer Science Club"></a>
+            <a href="/" class="navbar-brand"><img class="ahscsico" src="/images/ahsCS.png" alt="Home" title="AHS Computer Science Club"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
@@ -49,24 +49,16 @@
             </div>
     </nav>  
 
+    <br>
+
     <div class="container">
-        <div class="ourmissiontxt">
-            <br>
-            <h1 style="font-weight: 700;">Our Mission</h1>
+        <div class="womeninstem">
 
-            <p>is to introduce students to the many fields computer science  </p>
-            <p>has to offer and help develop their skills to the next level.</p>
-
-            <br>
+            <h1 data-aos-delay="0" data-aos="fade-up" style="text-align: center;" id="womeninstem" >Women in STEM</h1>
+            <p style="font-size: 1.3rem; font-weight: 400;" data-aos="fade-up" data-aos-delay="100" >This is a page in testing. It has not been completed. This is filler text. Please enjoy the filler text. How are you today? I'm good. This page will have stuff in it soon, just wait a bit. Again, this is a page that is not finished, and this is filler text. This is text designed to act as a placeholder for an unfinished page. You can erase it at any time. I don't mind.</p>
             
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe3mOv3VskCxd2aAkUwgQWJ4Hq11lyeaf2kBjSR7pkhEKJmsg/viewform" class="btn px-5" target="_blank">Join</a>
-            </a>
-
-            <br>
-
         </div>
 
-        <div class="ourmission"><img src="./images/man-alt.png"> </img></div>
     </div>
 
     <footer>
