--- a/team/index.html
+++ b/team/index.html
@@ -246,23 +246,24 @@ html {
   <div class="bottom py-3 px-3">
           <br>
               <div class="hstack gap-2" class="footertext">               
-                  <div class="vstack gap-3">
+                  <div class="vstack gap-3" style = "float:left; width:50%" >
                       <div class="white-text" class="underlined-text" style="font-size: 1.6rem; text-decoration: underline;" class="bg-none">Alhambra CS Club</div>
                       <div class="white-text" class="underlined-text" class="bg-none ">Questions? <a href="mailto:matthew@parabla.net" style="color: white;">Email us.</a></div>
                       <div class="white-text" class="underlined-text" class="bg-none ">Built by Parabla. </div>
                     </div>
-                    <div class="vstack gap-6">
-                        <h3 class="white-text">Socials</h3>
-                          <a class="white-text" href="https://discord.gg/MAqeXJJ"><i class="fa-brands fa-discord"></i></a>
-                          <a class="white-text" href="https://instagram.com/ahscompscience"><i class="fa fa-instagram"></i></a>
-                          <a class="white-text" href="https://twitter.com/ahscompscience"><i class="fa fa-twitter"></i></a>
-                          <a class="white-text" href="https://www.remind.com/join/alhambracs"><i class="fa-regular fa-bell"></i></a>
+                    <div style = "float:left; width:20%" >
+                        <h3 class="white-text">&ensp;Socials</h3>
+                          <a class="white-text" style="text-decoration: none;" href="https://discord.gg/MAqeXJJ"><i class="fa-brands fa-discord"></i>&ensp;</a>
+                          <a class="white-text" style="text-decoration: none;" href="https://instagram.com/ahscompscience"><i class="fa fa-instagram"></i>&ensp;</a>
+                          <a class="white-text" style="text-decoration: none;" href="https://twitter.com/ahscompscience"><i class="fa fa-twitter"></i>&ensp;</a>
+                          <a class="white-text" style="text-decoration: none;" href="https://www.remind.com/join/alhambracs"><i class="fa-regular fa-bell"></i></a>
                     </div>
                 </div>
               
   </div>
 </div>
 </footer>
+
 
 <script src="/libraries/aos-master/dist/aos.js"></script>
 <script src="/libraries/jquery-3.6.0.min.js"></script>
