team page filled
sorta filled, any missing info can be filled later, fixed donate button scaling issue

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
     <div class="container-fluid">
         <div class="transition"></div>
         <div class="aboutus"> 
-            <br>
+
              <h1>About Us</h1>
-            <p style="font-size: 1.3rem; margin-left: 15%; margin-right: 15%; margin-top: 2%;">Alhambra CS Club is Alhambra Senior High’s largest club in count, and thanks to our members, the most funded one as well. Founded in 2017, the CS Club seeks to accomplish what the computer science program at Alhambra cannot: to provide students continuing education outside the classroom, access to other CS-related programs, as well as to connect them with professionals in the STEM industry, all without paying a single dime. We created an environment with no barrier to learning, and one where people pursuing their passions can thrive.<br><br> These programs would not be made possible without our sponsors and club donations. We'd appreciate your help in supporting the student community; all donations are tax-deductible. </p> <br>
-            <a href="https://www.gofundme.com/f/alhambra-cs-club" class="btn btn-donate" target="_blank"><i class="fa-solid fa-hand-holding-dollar"></i>&ensp;Donate</a>
+            <p style="font-size: 1.3rem; margin-left: 15%; margin-right: 15%; margin-top: 2%;">Alhambra CS Club is Alhambra Senior High’s largest club in count, and thanks to our members, the most funded one as well. Founded in 2017, the CS Club seeks to accomplish what the computer science program at Alhambra cannot: to provide students continuing education outside the classroom, access to other CS-related programs, as well as to connect them with professionals in the STEM industry, all without paying a single dime. We created an environment with no barrier to learning, and one where people pursuing their passions can thrive.<br><br> These programs would not be made possible without our sponsors and club donations. We'd appreciate your help in supporting the student community; all donations are tax-deductible. </p>
+            <a href="https://www.gofundme.com/f/alhambra-cs-club" class="btn btn-donate" target="_blank"><i class="fa-solid fa-hand-holding-dollar"></i>&ensp;Donate</a><br><br>
         </div>
     </div>
 
