--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                   
                   <div class="col py-3">
                     <div data-aos="fade-up" data-aos-delay="200">
-                      <a href="https://youtube.com/" target="_blank">
-                        <img class="card-img-top" src="/images/placeholder.png" alt="Placeholder image">
+                      <a href="https://hackplus.io/" target="_blank">
+                        <img class="card-img-top" src="/images/hackplus.png" alt="Hack Plus logo">
                       </a>
                       
                     </div>
