--- a/team/index.html
+++ b/team/index.html
@@ -140,8 +140,8 @@ html {
               <p class="title">President</p>
               <p>Hi! I'm Matthew, a student with background in computer science & business looking for opportunities in product management and software engineering. Currently at a stealth startup building something :)</p>
               <a class="btn btn-normal" target="_blank" href="https://www.linkedin.com/in/mapoztate/">LinkedIn</a>
-              <a class="btn btn-normal" target="_blank" href="https://mapoztate.com">Website</a>
-              <a class="btn btn-normal" target="_blank" href="mailto:matt@mapoztate.com">Email</a>
+              <!-- <a class="btn btn-normal" target="_blank" href="https://mapoztate.com">Website</a>
+              <a class="btn btn-normal" target="_blank" href="mailto:matt@mapoztate.com">Email</a> -->
               <br><br>
               
               <br>
