--- a/team/index.html
+++ b/team/index.html
@@ -223,7 +223,7 @@ html {
               <h2>Sami Asefi</h2>
               <p class="title">Events</p>
               <p>N/A</p>
-              <a class="btn btn-normal" target="_blank" href="">N/A</a>
+              <a class="btn btn-normal" target="_blank" href="https://www.linkedin.com/in/sami-asefi-8b4b6a244/">LinkedIn</a>
               <br><br>
               
               <br>
