updated hackplus logo

--- a/team/index.html
+++ b/team/index.html
@@ -166,7 +166,7 @@ html {
             <div class="container">
               <h2>Yara Hassan</h2>
               <p class="title">Vice President, Women in STEM</p>
-              <p>I am a hard-working high school senior who is constantly looking for new challenges and opportunities to grow and learn new skills. I am interested in the fields of computer science and legal studies, and I hope to combine my knowledge of both fields into a career in the future. I am currently looking for internships that will allow me to learn more about the field of legal studies, business, or computer science, and I’m open to network! </p>
+              <p>I am a hard-working high school senior who is constantly looking for new challenges and opportunities to grow and learn new skills. I am interested in the fields of computer science and legal studies.</p>
               <a class="btn btn-normal" target="_blank" href="https://www.linkedin.com/in/yara-hassan-634b78210/">LinkedIn</a>
               <br><br>
               
