moved past officers button
moved past officers button to bottom of team page and made opprotunites page autoredirect to index

--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=/index.html">
     <title>Alhambra Computer Science Club</title>
 
 
@@ -57,7 +58,7 @@
 
     <div class="container" style="text-align: center;">
       <h5 data-aos-delay="0" data-aos="fade-up" > 
-        You want an opportunitity???????????????????????????
+        If you are currently reading this, sorry, no opportunities are here yet. SRRY!!!
         
       </h5>
 
@@ -68,10 +69,7 @@
 
 
 <div class="container my-4">
-    <p>We have some amazing opportunities such as Lorem ipsum dolor sit 
-      and Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      You can learn how to Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, animi, 
-      and even how to Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam, illo id!</p>
+    <p>404!</p>
 
       
 </div>
