--- a/team/index.html
+++ b/team/index.html
@@ -111,8 +111,8 @@ html {
     <div class="banner-team"> 
       <div class="container">
         <h1 style = "text-align: center;">Our Team
-        <br>
-          <a class="btn btn-orange" href="/pastofficers/" >Past Officers</a>
+        <!-- <br>
+          <a class="btn btn-orange" href="/pastofficers/" >Past Officers</a> -->
         </h1>
 
 
@@ -318,7 +318,14 @@ html {
 
       </div>
 
-      
+      <div class="container">
+        <h1 style = "text-align: center;">
+        <br>
+          <a class="btn btn-orange" href="/pastofficers/" >Past Officers</a>
+        </h1>
+
+
+      </div>
 
 
 
