--- a/events/index.html
+++ b/events/index.html
@@ -107,7 +107,7 @@
   </div>
 
   <div class="hostedevents" style = "float:left; width:50%" data-aos-delay="150" data-aos="fade-up" >
-    <h3> Hour of Code <br> MJHS Field Trip <br> Holidary Frolic</h3> 
+    <h3> Hour of Code <br> MJHS Field Trip <br> Holiday Frolic</h3> 
   </div>
 </div> 
 <h4 style = "text-align: center;" data-aos-delay="50" data-aos="fade-up" >...and much more!</h4> <hr>
