--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <br>
             
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe3mOv3VskCxd2aAkUwgQWJ4Hq11lyeaf2kBjSR7pkhEKJmsg/viewform" class="btn btn-normal" target="_blank"><i class="fa-solid fa-user-plus"></i>&ensp;Join</a>
+            <a href="https://forms.gle/qhjweGeWcULfuVC76" class="btn btn-normal" target="_blank"><i class="fa-solid fa-user-plus"></i>&ensp;Join</a>
             </a>
 
             <br>
