--- a/events/index.html
+++ b/events/index.html
@@ -38,8 +38,8 @@
     
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="/team" class="nav-link">Team</a></li>
-                    <li class="nav-item"><a href="/opportunities" class="nav-link">Opportunities</a></li>
+                    <li class="nav-item"><a href="/" class="nav-link">Team</a></li>
+                    <li class="nav-item"><a href="/" class="nav-link">Opportunities</a></li>
                     <li class="nav-item"><a href="/events/" class="nav-link">Events</a></li>
         
                 </ul>
