--- a/team/index.html
+++ b/team/index.html
@@ -162,7 +162,7 @@ html {
         
         <div class="column">
           <div class="card">
-            <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHPlUCk6XZvZA/profile-displayphoto-shrink_800_800/0/1619661537536?e=1665014400&v=beta&t=NhE5byJgpU7i-pRJ0jURebxNuwFz5oQecgzgsNAZcJM" alt="Picture of Yara Hassan in front of a pond`" style="width:100%">
+            <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHPlUCk6XZvZA/profile-displayphoto-shrink_800_800/0/1619661537536?e=1665014400&v=beta&t=NhE5byJgpU7i-pRJ0jURebxNuwFz5oQecgzgsNAZcJM" alt="Picture of Yara Hassan in front of a pond" style="width:100%">
             <div class="container">
               <h2>Yara Hassan</h2>
               <p class="title">Vice President, Women in STEM</p>
