--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="/" class="nav-link">Team</a></li>
-                    <li class="nav-item"><a href="/" class="nav-link">Opportunities</a></li>
+                    <li class="nav-item"><a href="/opportunities" class="nav-link">Opportunities</a></li>
                     <li class="nav-item"><a href="/events/" class="nav-link">Events</a></li>
         
                 </ul>
